# alt2py-testing

./: Aggregators.py  LICENSE  OTaaT_tester.py  README.md  _utils.py  convert_yxdb_inputs.py  index.py  inout.bak  input_convert_spatial.yxmd  input_converter.bak  input_converter.py  input_converter.yxmd  input_coverter.bak  sandbox.py  scraper.py  select_test.bak  select_test.yxmd  setup.cfg  spatial_tester.py  test-odbc.py  test-script.py  test.bak  test.yxmd  yxdb_inputs_converter.bak  yxdb_inputs_converter.yxmd
One Tool At A Time - Testing/AppendFields/: 1 - Simple Append.avro  AppendFields_edit.yxmd  (+1 more)
src/: __init__.py
tests/: AppendFields_example.py  Clean_example.py  CrossTab_example.py  DateTime_example.py  Filter_example.py  Formula_example.py  GenerateRows_example.py  Impute_example.py  Join_example.py  MultiFieldBin_example.py  MultiFieldFormula_example.py  MultiRowFormula_example.py  OTaaT_tester.py  OverSample_example.py  RandomSample_example.py  RecordID_example.py  RegEx_example.py  Sample_example.py  SelectRecords_example.py  Select_example.py  Sort_example.py  Summarize_example.py  TextToColumns_example.py  Tile_example.py  Transpose_example.py  Union_example.py  Unique_example.py  XMLParse_example.py  demofile2.py  demofile2.txt  file_name  playground.py
tools/: Clean.py  CrossJoin.py  CrossTab.py  FileInput.py  Filter.py  Formula.py  GenerateRows.py  Impute.py  Join.py  MultiFieldBin.py  MultiFieldFormula.py  MultiRowFormula.py  OverSample.py  RegEx.py  Sample.py  Select.py  SelectRecords.py  TextToColumns.py  Tile.py  Union.py  Unique.py
(+1121 files in other folders)
