[metadata]
name = alt2py
version = 0.0.2
author = Michael Michelini
author_email = mmichelini1997@gmail.com
description = A package that provides simplified data prep and blending functionality.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/M-Michelini/alt2py/tree/master#readme
project_urls =
    Bug Tracker = https://github.com/M-Michelini/alt2py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
